A11y/shibui-256: Updated color values to correct several color contrast issues

--- a/ui/src/theme/_palette.scss
+++ b/ui/src/theme/_palette.scss
@@ -9,7 +9,7 @@ $gray-300: #dee2e6;
 $gray-400: #ced4da;
 $gray-500: #adb5bd;
 $gray-600: #868e96;
-$gray-700: #495057;
+$gray-700: #697581;
 $gray-800: #343a40;
 $gray-900: #212529;
 $black:  #000;
@@ -31,10 +31,10 @@ $light-blue: #007db1;
 $indigo:  #6610f2;
 $purple:  #6f42c1;
 $pink:    #e83e8c;
-$red:     #ef3e33;
+$red:     #d3190f;
 $orange:  #fd7e14;
 $yellow:  #ffc107;
-$green:   #6db300;
+$green:   #498500;
 $teal:    #20c997;
 $cyan:    #17a2b8;
 
@@ -59,7 +59,7 @@ $colors: (
 
 $theme-colors: (
   primary: $blue,
-  secondary: $gray-600,
+  secondary: $gray-700,
   success: $green,
   info: $light-blue,
   warning: $yellow,
